crates/loxide_interpreter/tests/snapshots/integration@assignment__associativity.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
var a = "a";

var b = "b";

var c = "c";


// Assignment is right-associative.
a = b = c;

print a; // expect: c
// => str(c)
print b; // expect: c
// => str(c)
print c; // expect: c
// => str(c)
