crates/loxide_interpreter/tests/snapshots/integration@assignment__grouping.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
var a = "a";

(a) = "value"; // Error at '=': Invalid assignment target.

>>>>> Error Section <<<<<
  × Invalid assignment target.
   ╭─[2:1]
 1 │ var a = "a";
 2 │ (a) = "value"; // Error at '=': Invalid assignment target.
   · ─┬─
   ·  ╰── this assignment target is invalid
   ╰────
