crates/loxide_interpreter/tests/snapshots/integration@assignment__infix_operator.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
var a = "a";

var b = "b";

a + b = "value"; // Error at '=': Invalid assignment target.

>>>>> Error Section <<<<<
  × Invalid assignment target.
   ╭─[3:1]
 2 │ var b = "b";
 3 │ a + b = "value"; // Error at '=': Invalid assignment target.
   · ──┬──
   ·   ╰── this assignment target is invalid
   ╰────
