crates/loxide_interpreter/tests/snapshots/integration@assignment__local.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
{
  var a = "before";
  print a; // expect: before

  a = "after";
  print a; // expect: after

  print a = "arg"; // expect: arg
  print a; // expect: arg
}
// => str(before)
// => str(after)
// => str(arg)
// => str(arg)
